--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <p>tihis a paragraph.</p> 
-   <p> hello world </p>
-     
+    <button> Press</button>
 </body>
 </html>
