--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p> hello programming world</p>
-<p> how is the prgrams going</p>
+<p> how is the prgrams goin</p>
         
 </body>
 </html>
