--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
 <p> hello programming world</p>
 <p> how is the prgrams goin</p>
 <p>This is the new paragraph</p>
+<p> for reset revert</p>
         
 </body>
 </ht
